# isdf_kizi_stock

./: .env.sample  .gitignore  =2.0.1  README.md  USER_GUIDE.md  main.py  pyproject.toml  requirements.txt  update_bot.sh
.claude/: settings.json
.claude/hooks/: send-ntfy.sh
.kiro/specs/article-stock-bot/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/unified-bot-management/: design.md  requirements.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
config/: settings.py
deployment/: README.md  article-bot.service  article-stock-bot.service
docs/: DEPLOYMENT.md  GITHUB_SETUP.md  RASPBERRY_PI_SETUP.md
src/ai/: gemini.py
src/bot/: client.py  handlers.py  reactions.py
src/scraper/: ogp.py
src/storage/: github.py  markdown.py  vault.py
src/utils/: logger.py  parser.py  retry.py
tests/: conftest.py  test_comment_append_integration.py  test_config.py  test_directory_structure.py  test_error_handling.py  test_error_handling_flow_integration.py  test_gemini.py  test_github_push_integration.py  test_main_flow_integration.py  test_markdown.py  test_ogp.py  test_parser.py  test_project_setup.py  test_retry.py  test_systemd.py  test_vault.py
